--- a/app/css/place-search.css
+++ b/app/css/place-search.css
@@ -42,6 +42,7 @@
     width: 50%;
     font-size: 25px;
     color:rgba(111,1,1,0.9);
+    margin-top: 20px;
 }
 
 .place-search{
